translate knop heet nu play

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               <br>
 
               <br>
-              <input type="button" class="btn btn-primary" id="play" value="Translate" onclick='callPython(document.getElementById("mySiGML").value);'/>
+              <input type="button" class="btn btn-primary" id="play" value="Play" onclick='callPython(document.getElementById("mySiGML").value);'/>
               <input type="button" id="stopButton" class="btn btn-primary" value="Stop" onclick='CWASA.stopSiGML();'/>
               <input type="button" id="replayButton" class="undisplayed" value="Replay" name="" onclick="playText(document.getElementById('replayButton').name)">
 
