attempt to fix explainSign display

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <!-- <div class="CWASAPanel av0" align="center" ></div> -->
         <span id="avatar" class="CWASAAvatar av0" align="left" ></span>
         <span id="explanation" class="undisplayed" align="left">
-          <div id="explText" class ="undisplayed" align="center"></div>
+          <div id="explText" class ="undisplayed"></div>
         </span>
         <!--================================================================-->
 
@@ -229,8 +229,6 @@
               <textarea id="suggestions" class="inputBox" placeholder="Enter your suggestion here. If you have more than one word to suggest, separate them with ';'"></textarea>
               <!-- <input type="button" value="Send" onclick='addSuggestion(document.getElementById("suggestions").value);' style="display: inline-block;" /> -->
         </span>
-
-        <!-- <button id="echo" onclick='suggestions(document.getElementById("mySiGML").value);'>click !</button> -->
 
         <!-- FR: I've made the following progress fields invisible, if you comment them out completely the avatar doesn't work anymore -->
         <div align="center" class="undisplayed">
