--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Demos</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translator</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#People">People</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">Publications</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Tutorial">Tutorial</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Tutorial">SiGML Tutorial</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
