tabs op algemen website niet meer scrollbaar

--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
 <!-- CSS file for avatar panel and controls, taken from the UEA website but reduced in order to avoid clashes with bootstrap css -->
 <link rel="stylesheet" href="css/cwasa-reduced.css">
 
-<!-- =============================================== -->
-<!-- Javascripts (more scripts are loaded at the very end, somehow the placement matters) -->
-
-
-
 </head>
 
 
@@ -65,13 +60,13 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#About">Mission</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Translate">Translator</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#People">People</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Publications">Publications</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Funding">Funding</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Tutorial">SiGML Tutorial</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Resources">Resources</a></li>
+                <li class="nav-item"><a class="nav-link" href="#About">Mission</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Translate">Translator</a></li>
+                <li class="nav-item"><a class="nav-link" href="#People">People</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Publications">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Funding">Funding</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Tutorial">SiGML Tutorial</a></li>
+                <li class="nav-item"><a class="nav-link" href="#Resources">Resources</a></li>
                 <li class="nav-item"><a class="nav-link" href="index-nl.html">NL</a></li>
             </ul>
         </div>
@@ -418,7 +413,7 @@
 <!-- Grayscale theme JS-->
 <script type="text/javascript" src="js/grayscalescript.js"></script>
 <!-- Javascript for smooth scrolling-->
-<!-- <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script> -->
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
 
 <!-- script for generating avatar animations -->
 <script type="text/javascript" src="cwa/allcsa.js"> </script>
